--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
     <meta http-equiv="cache-control" content="public, max-age=31536000, inmutable" />
     <meta http-equiv="expires" content="31536000"/>
     <meta http-equiv="content-encoding" content="gzip" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Montserrat:wght@500;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://raw.githubusercontent.com">
+    <link rel="preconnect" href="https://jorgelmunozp.github.io">
+
     <base href="/">
     <title>Real Estate</title>
   </head>
