--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Real Estate App"  />
+    <meta name="description" content="Real Estate"  />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <meta http-equiv="cache-control" content="public, max-age=31536000, inmutable" />
-    <meta http-equiv="expires" content="31536000"/>
-    <meta http-equiv="content-encoding" content="gzip" />
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Montserrat:wght@500;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-    
-    <link rel="preconnect" href="https://raw.githubusercontent.com">
-    <link rel="preconnect" href="https://jorgelmunozp.github.io">
 
-    <base href="/">
     <title>Real Estate</title>
   </head>
   <body>
