--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
+    <link rel="preconnect" href="https://realestate-api-r76f.onrender.com" />
+    <link rel="dns-prefetch" href="https://realestate-api-r76f.onrender.com" />
+
     <link rel="preload" as="image" href="/background.svg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
